CA1_Phase1 - Lexical:Syntactic Analyzer/FunctionCraft/gen/main/grammar/FunctionCraftParser.java
// Generated from /Users/kourosh/Uni/PLC/CA/Phase1/Codes/FunctionCraft/src/main/grammar/FunctionCraft.g4 by ANTLR 4.13.1
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FunctionCraftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, DEF=2, RETURN=3, END=4, IF=5, ELSE=6, ELSEIF=7, CHOP=8, CHOMP=9, 
		PUSH=10, PUTS=11, METHOD=12, LEN=13, PATTERN=14, MATCH=15, NEXT=16, BREAK=17, 
		LOOP=18, DO=19, FOR=20, IN=21, ARROW=22, LPAR=23, RPAR=24, NOT=25, PLUS=26, 
		MINUS=27, MINUSMINUS=28, PLUSPLUS=29, MULT=30, DIV=31, GEQ=32, LEQ=33, 
		GTR=34, LES=35, EQL=36, NEQ=37, PLUSEQ=38, MINEQ=39, MULTEQ=40, DIVEQ=41, 
		MODEQ=42, AND=43, OR=44, APPEND=45, ASSIGN=46, LBRACE=47, RBRACE=48, LBRAK=49, 
		RBRAK=50, COMMA=51, DOT=52, COLON=53, SEMICOLON=54, SEPERATOR=55, INT_VAL=56, 
		FLOAT_VAL=57, STRING_VAL=58, BOOL_VAL=59, IDENTIFIER=60, COMMENT=61, WS=62;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_function = 2, RULE_functionParameters = 3, 
		RULE_functionBody = 4, RULE_statement = 5, RULE_builtIn = 6, RULE_pattern = 7, 
		RULE_puts = 8, RULE_len = 9, RULE_push = 10, RULE_match = 11, RULE_chop = 12, 
		RULE_chomp = 13, RULE_functionCall = 14, RULE_loop = 15, RULE_flowControl = 16, 
		RULE_ifstmt = 17, RULE_ifStmtParams = 18, RULE_ifBlock = 19, RULE_elseIfBlocks = 20, 
		RULE_elseBlock = 21, RULE_statementList = 22, RULE_lambdaFunction = 23, 
		RULE_expr = 24, RULE_assignExpression = 25, RULE_appendExpression = 26, 
		RULE_appendExpressionTail = 27, RULE_logicalOrExpression = 28, RULE_logicalAndExpression = 29, 
		RULE_equalExpression = 30, RULE_comparisonExpression = 31, RULE_plusMinusExpression = 32, 
		RULE_plusMinusExpressionTail = 33, RULE_multiplyDivideExpression = 34, 
		RULE_multiplyDivideExpressionTail = 35, RULE_unaryExpression = 36, RULE_unaryExpressionPost = 37, 
		RULE_unaryExpressionPostTail = 38, RULE_retrieveListExpression = 39, RULE_paranthesisExpression = 40, 
		RULE_variableExpression = 41, RULE_method = 42, RULE_matchExpr = 43, RULE_funcParameter = 44, 
		RULE_funcParameterDefault = 45, RULE_dataTypes = 46, RULE_list = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main", "function", "functionParameters", "functionBody", 
			"statement", "builtIn", "pattern", "puts", "len", "push", "match", "chop", 
			"chomp", "functionCall", "loop", "flowControl", "ifstmt", "ifStmtParams", 
			"ifBlock", "elseIfBlocks", "elseBlock", "statementList", "lambdaFunction", 
			"expr", "assignExpression", "appendExpression", "appendExpressionTail", 
			"logicalOrExpression", "logicalAndExpression", "equalExpression", "comparisonExpression", 
			"plusMinusExpression", "plusMinusExpressionTail", "multiplyDivideExpression", 
			"multiplyDivideExpressionTail", "unaryExpression", "unaryExpressionPost", 
			"unaryExpressionPostTail", "retrieveListExpression", "paranthesisExpression", 
			"variableExpression", "method", "matchExpr", "funcParameter", "funcParameterDefault", 
			"dataTypes", "list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'def'", "'return'", "'end'", "'if'", "'else'", "'elseif'", 
			"'chop'", "'chomp'", "'push'", "'puts'", "'method'", "'len'", "'pattern'", 
			"'match'", "'next'", "'break'", "'loop'", "'do'", "'for'", "'in'", "'->'", 
			"'('", "')'", "'!'", "'+'", "'-'", "'--'", "'++'", "'*'", "'/'", "'>='", 
			"'<='", "'>'", "'<'", "'=='", "'!='", "'+='", "'-='", "'*='", "'/='", 
			"'%='", "'&&'", "'||'", "'<<'", "'='", "'{'", "'}'", "'['", "']'", "','", 
			"'.'", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAIN", "DEF", "RETURN", "END", "IF", "ELSE", "ELSEIF", "CHOP", 
			"CHOMP", "PUSH", "PUTS", "METHOD", "LEN", "PATTERN", "MATCH", "NEXT", 
			"BREAK", "LOOP", "DO", "FOR", "IN", "ARROW", "LPAR", "RPAR", "NOT", "PLUS", 
			"MINUS", "MINUSMINUS", "PLUSPLUS", "MULT", "DIV", "GEQ", "LEQ", "GTR", 
			"LES", "EQL", "NEQ", "PLUSEQ", "MINEQ", "MULTEQ", "DIVEQ", "MODEQ", "AND", 
			"OR", "APPEND", "ASSIGN", "LBRACE", "RBRACE", "LBRAK", "RBRAK", "COMMA", 
			"DOT", "COLON", "SEMICOLON", "SEPERATOR", "INT_VAL", "FLOAT_VAL", "STRING_VAL", 
			"BOOL_VAL", "IDENTIFIER", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionCraft.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionCraftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<PatternContext> pattern() {
			return getRuleContexts(PatternContext.class);
		}
		public PatternContext pattern(int i) {
			return getRuleContext(PatternContext.class,i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(FunctionCraftParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(FunctionCraftParser.COMMENT, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(99);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case DEF:
						{
						setState(96);
						function();
						}
						break;
					case PATTERN:
						{
						setState(97);
						pattern();
						}
						break;
					case COMMENT:
						{
						setState(98);
						match(COMMENT);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(104);
			main();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT) {
				{
				{
				setState(105);
				match(COMMENT);
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(FunctionCraftParser.DEF, 0); }
		public TerminalNode MAIN() { return getToken(FunctionCraftParser.MAIN, 0); }
		public TerminalNode LPAR() { return getToken(FunctionCraftParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(FunctionCraftParser.RPAR, 0); }
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public TerminalNode END() { return getToken(FunctionCraftParser.END, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(DEF);
			setState(112);
			match(MAIN);
			 System.out.println("MAIN"); 
			setState(114);
			match(LPAR);
			setState(115);
			match(RPAR);
			setState(116);
			functionBody();
			setState(117);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public Token name;
		public TerminalNode DEF() { return getToken(FunctionCraftParser.DEF, 0); }
		public TerminalNode LPAR() { return getToken(FunctionCraftParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(FunctionCraftParser.RPAR, 0); }
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public TerminalNode END() { return getToken(FunctionCraftParser.END, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FunctionCraftParser.IDENTIFIER, 0); }
		public FunctionParametersContext functionParameters() {
			return getRuleContext(FunctionParametersContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(DEF);
			setState(120);
			((FunctionContext)_localctx).name = match(IDENTIFIER);
			 System.out.println("FuncDec: " + (((FunctionContext)_localctx).name!=null?((FunctionContext)_localctx).name.getText():null)); 
			setState(122);
			match(LPAR);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRAK || _la==IDENTIFIER) {
				{
				setState(123);
				functionParameters();
				}
			}

			setState(126);
			match(RPAR);
			setState(127);
			functionBody();
			setState(128);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionParametersContext extends ParserRuleContext {
		public FuncParameterContext funcParameter() {
			return getRuleContext(FuncParameterContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(FunctionCraftParser.COMMA, 0); }
		public FuncParameterDefaultContext funcParameterDefault() {
			return getRuleContext(FuncParameterDefaultContext.class,0);
		}
		public FunctionParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionParameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterFunctionParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitFunctionParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitFunctionParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionParametersContext functionParameters() throws RecognitionException {
		FunctionParametersContext _localctx = new FunctionParametersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionParameters);
		try {
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				funcParameter();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(131);
				funcParameter();
				setState(132);
				match(COMMA);
				setState(133);
				funcParameterDefault();
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				funcParameterDefault();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionBodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(FunctionCraftParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(FunctionCraftParser.COMMENT, i);
		}
		public TerminalNode RETURN() { return getToken(FunctionCraftParser.RETURN, 0); }
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterFunctionBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitFunctionBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitFunctionBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4540191374524596000L) != 0)) {
				{
				setState(140);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IF:
				case CHOP:
				case CHOMP:
				case PUSH:
				case PUTS:
				case METHOD:
				case LEN:
				case MATCH:
				case LOOP:
				case FOR:
				case ARROW:
				case LPAR:
				case NOT:
				case MINUS:
				case LBRAK:
				case INT_VAL:
				case FLOAT_VAL:
				case STRING_VAL:
				case BOOL_VAL:
				case IDENTIFIER:
					{
					setState(138);
					statement();
					}
					break;
				case COMMENT:
					{
					setState(139);
					match(COMMENT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(145);
				match(RETURN);
				 System.out.println("RETURN"); 
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2234348365310902048L) != 0)) {
					{
					setState(147);
					statement();
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(FunctionCraftParser.SEMICOLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public IfstmtContext ifstmt() {
			return getRuleContext(IfstmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CHOP:
			case CHOMP:
			case PUSH:
			case PUTS:
			case METHOD:
			case LEN:
			case MATCH:
			case ARROW:
			case LPAR:
			case NOT:
			case MINUS:
			case LBRAK:
			case INT_VAL:
			case FLOAT_VAL:
			case STRING_VAL:
			case BOOL_VAL:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(152);
				expr();
				}
				setState(153);
				match(SEMICOLON);
				}
				break;
			case LOOP:
			case FOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				loop();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(156);
				ifstmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
